--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width">
 
-  <title>BoldChat Test Page</title>
+  <title>BoldChat Test Page For Xively</title>
   
   <!-- Included CSS Files (Uncompressed) -->
   <!--
