add xively test button

--- a/main.html
+++ b/main.html
@@ -68,27 +68,28 @@
         <h1>BoldChat Demo App</h1>
         <p class="lead">This is a demo app for boldchat floating button.</p>
           
-        <!-- BoldChat Visitor Monitor HTML v5.00 (Website=Xively Test Website,ChatButton=- None -,ChatInvitation=- None -) -->
-        <script type="text/javascript">
-          window._bcvma = window._bcvma || [];
-          _bcvma.push(["setAccountID", "2307475884"]);
-          _bcvma.push(["setParameter", "WebsiteID", "98532614872110962"]);
-          _bcvma.push(["pageViewed"]);
-          var bcLoad = function(){
-            if(window.bcLoaded) return; window.bcLoaded = true;
-            var vms = document.createElement("script"); vms.type = "text/javascript"; vms.async = true;
-            vms.src = ('https:'==document.location.protocol?'https://':'http://') + "vmss-alpha.boldchat.com/aid/2307475884/bc.vms4/vms.js";
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(vms, s);
-          };
-          if(window.pageViewer && pageViewer.load) pageViewer.load();
-          else if(document.readyState=="complete") bcLoad();
-          else if(window.addEventListener) window.addEventListener('load', bcLoad, false);
-          else window.attachEvent('onload', bcLoad);
-        </script>
-        <noscript>
-        <a href="http://www.boldchat.com" title="Live Chat Software" target="_blank"><img alt="Live Chat Software" src="https://vms-alpha.boldchat.com/aid/2307475884/bc.vmi?wdid=98532614872110962" border="0" width="1" height="1" /></a>
-        </noscript>
-        <!-- /BoldChat Visitor Monitor HTML v5.00 -->
+        <!-- BoldChat Visitor Monitor HTML v5.00 (Website=Xively Test Website,ChatButton=Xively Demo Floating Button,ChatInvitation=- None -) -->
+<script type="text/javascript">
+  window._bcvma = window._bcvma || [];
+  _bcvma.push(["setAccountID", "2307475884"]);
+  _bcvma.push(["setParameter", "WebsiteID", "98532614872110962"]);
+  _bcvma.push(["addFloat", {type: "chat", id: "888306376747801510"}]);
+  _bcvma.push(["pageViewed"]);
+  var bcLoad = function(){
+    if(window.bcLoaded) return; window.bcLoaded = true;
+    var vms = document.createElement("script"); vms.type = "text/javascript"; vms.async = true;
+    vms.src = ('https:'==document.location.protocol?'https://':'http://') + "vmss-alpha.boldchat.com/aid/2307475884/bc.vms4/vms.js";
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(vms, s);
+  };
+  if(window.pageViewer && pageViewer.load) pageViewer.load();
+  else if(document.readyState=="complete") bcLoad();
+  else if(window.addEventListener) window.addEventListener('load', bcLoad, false);
+  else window.attachEvent('onload', bcLoad);
+</script>
+<noscript>
+<a href="http://www.boldchat.com" title="Live Chat Software" target="_blank"><img alt="Live Chat Software" src="https://vms-alpha.boldchat.com/aid/2307475884/bc.vmi?wdid=98532614872110962" border="0" width="1" height="1" /></a>
+</noscript>
+<!-- /BoldChat Visitor Monitor HTML v5.00 -->
 
           
       </div>
